--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,22 +15,22 @@
       <div class="carousel-item active" data-bs-interval="10000">
         <img src="https://i.pinimg.com/originals/54/ab/c6/54abc658eb3b61c05f674c9838b3bb79.jpg" class="d-block w-100" alt="CSS">
         <div class="carousel-caption d-none d-md-block">
-          <h2>ELECTRONIC GADGETS</h2>
-          <p>30% OFF ON EACH PURCHASE</p>
+          <h2 [ngClass]="prod_array">ELECTRONIC GADGETS</h2>
+          <p [ngStyle]="{color:mycolor}">30% OFF ON EACH PURCHASE</p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
         <img src="https://www.loveyourclothes.org.uk/sites/default/files/styles/responsive/public/lyc-campaigns-website-header-1600.jpg?itok=DLdKu9UI" class="d-block w-100" alt="JS">
         <div class="carousel-caption d-none d-md-block">
-          <h5>MEN AND WOMENS WEAR</h5>
-          <p>TOYS</p>
+          <h2 [ngClass]="prod_array">MEN AND WOMENS WEAR</h2>
+          <p [ngStyle]="{color:mycolor}">BY TOP BRANDS WITH LATEST DESIGN</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://scavolini-cdn.thron.com/delivery/public/image/scavolini/3c008258-7a36-41f5-815a-0e1dcd113414/nuctwf/std/700x0/Diesel%20Social%20Kitchen_pag_22_23.jpg" class="d-block w-100" alt="JQ">
+        <img src="https://img3.exportersindia.com/product_images/bc-full/dir_79/2342818/home-appliances-1518593909-3646130.jpeg" class="d-block w-100" alt="JQ">
         <div class="carousel-caption d-none d-md-block">
-          <h5>HOME APPLIANCES</h5>
-          <p>WASHING MACHINE,REFRIGERATOR,DISH WASHER</p>
+          <h2 [ngClass]="prod_array">HOME APPLIANCES</h2>
+          <p [ngStyle]="{color:mycolor}">GRAB GADGETS WITHOUT WORRYING ABOUT BUDGET</p>
         </div>
       </div>
     </div>
@@ -45,5 +45,16 @@
   </div>
   <br>
   <br>
-
+<!--Buttons-->
+<div style="background-color:rgb(189, 218, 243)">
+  <P style="text-align:center;font-size:28px;color:red;">Already a User?</P><br>
+  <button href="" style="border-radius:8px;background-color:rgb(255, 169, 169);text-align:center;font-size:20px;color:black;margin-left :525px;margin-bottom:20px;width: 200px;height: 50px;">Login</button>
+  <br>
+  <br>
+</div>
+  
+<div style="background-color:rgb(105, 182, 249)">
+  <P style="text-align:center;font-size:28px;color:red;">Our Branches</P><br>
+  <button href="" style="border-radius:8px;background-color:rgb(255, 169, 169);text-align:center;font-size:20px;color:black;margin-left :525px;margin-bottom:20px;width: 200px;height: 50px;">Search</button>
+</div>
 
