--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -55,6 +55,6 @@
   
 <div style="background-color:rgb(105, 182, 249)">
   <P style="text-align:center;font-size:28px;color:red;">Our Branches</P><br>
-  <button href="" style="border-radius:8px;background-color:rgb(255, 169, 169);text-align:center;font-size:20px;color:black;margin-left :525px;margin-bottom:20px;width: 200px;height: 50px;">Search</button>
+  <button routerLink="contact" style="border-radius:8px;background-color:rgb(255, 169, 169);text-align:center;font-size:20px;color:black;margin-left :525px;margin-bottom:20px;width: 200px;height: 50px;">Search</button>
 </div>
 
