--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -147,7 +147,7 @@
     </head>
     <body>
         
-        <h1>PRODUCTS AVAILABLE</h1>
+        <h1 style="text-shadow:2px 3px 3px rgba(139, 3, 251, 0.724);">PRODUCTS AVAILABLE</h1>
   
         <section class="items">
             <div class="item">
