--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,11 +1,12 @@
 <div  style="border-style:none;">
+    <h2 style="text-align: center;margin-top:2px;margin-bottom:80px;color:brown;text-shadow:2px 3px 3px rgba(251, 3, 3, 0.724);">CONTACT DETAILS</h2>
     <div class="row" >
         <!--1st col-->
         <div class="col col-lg-4" *ngFor="let c of cont">
           <div class="card col-lg-12">
-              <div class="card-body col-lg-12">
-                  <div class="row" style="margin-top:10px;border-style:solid;border-color:black;border-radius:5px;padding:4px;">
-                      <div class="card col-lg-4">
+              <div class="card-body col-lg-12" style="background-color:rgb(211, 244, 243);border-radius: 18px;">
+                  <div class="row" style="margin-top:10px;border-style:solid;border-color:black;border-radius:5px;padding:6px;">
+                      <div class="card col-lg-4" >
                           <!--Property binding-->
                           <img [src]="c.img" style="width:100px;height:200px">
   
