--- a/src/app/deals/amazondeals/amazondeals.component.html
+++ b/src/app/deals/amazondeals/amazondeals.component.html
@@ -1,5 +1,14 @@
+<!--Auth Guard - LOGOUT-->
+<span style="float:right;margin-right:10px;" (click)="logOut()">
+    <strong>
+        <u>Log out</u>
+    </strong>
+  </span>
+  <br>
+  <br>
+  <br>
 <!--fetch all the records from fridge property in the .ts file which is accessing the refrigerator.json-->
-<marquee>Amazing Deals in amazon</marquee>
+<marquee>!!!GRAB THE OFFER BEFORE ITS TOO LATE!!!</marquee>
 <div class="row" >
     <app-allproducts></app-allproducts>
 </div>
