--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -21,6 +21,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="amazondeals">Deals</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="productDetails">Product Details</a>
+          </li>
           <!-- <li class="nav-item">
             <a class="nav-link" routerLink="register">Register</a>
           </li> -->
@@ -32,8 +35,9 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" routerLink="dress">Dress</a></li>
               <li><a class="dropdown-item" routerLink="fridge">Home Appliances</a></li>
-              <li><a class="dropdown-item" routerLink="washingmachine">Electronic Gadgets</a></li>
+              <!-- <li><a class="dropdown-item" routerLink="washingmachine">Electronic Gadgets</a></li> -->
               <li><a class="dropdown-item" routerLink="microoven">Cosmetics</a></li>
+              
               
               <!-- <li><hr class="dropdown-divider"></li> -->
               <li><a class="dropdown-item" href="#">Electronic Gadgets</a></li>
