--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,3 +58,156 @@
   <button  style="border-radius:8px;background-color:rgb(255, 169, 169);text-align:center;font-size:20px;color:black;margin-left :525px;margin-bottom:20px;width: 200px;height: 50px;" routerLink="contact">Search</button>
 </div> -->
 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Commercial crops category page-Fruits</title>
+        <style type="text/css">
+            *{
+                margin: 0;
+                padding: 0;
+                font-family: sans-serif;
+                box-sizing: border-box;
+            }
+            h1
+            {
+                text-align: center;
+                color: green;
+                padding: 20px;
+            }
+            nav{
+                background-color: lime;
+                display: grid;
+                place-items: center;
+            }
+            nav ul{
+                list-style-type: none;
+            }
+            nav ul a{
+                display: inline-block;
+                padding: 20px;
+                text-decoration: none;
+                color: #000;
+                transition: 0.2s ease-in;
+                font-size: 18px;
+            }
+            nav ul a:hover{
+                background-color: green;
+                color: white;
+            }
+            .items{
+                display: grid;
+                grid-template-columns: repeat(4,1fr);
+                padding: 30px 20px;
+                grid-column-gap: 20px;
+                grid-row-gap: 30px;
+            }
+            .item img{
+                width: 100%;
+                height: 300px;
+                object-fit: cover;
+                cursor: pointer;
+                transition: 0.2s ease;
+            }
+            .item img:hover{
+                transform: scale(1.04);
+            }
+            .item h4{
+                padding: 5px;
+                text-align: center;
+            }
+            .item button{
+                padding: 5px 30px;
+                border: none;
+                outline: none;
+                background-color: green;
+                color: white;
+                cursor: pointer;
+                border-radius: 4px;
+                font-size: 20px;
+                display: block;
+                margin: 0 auto;
+                transition: 0.2s all;
+            }
+            .item button:hover{
+                transform: scale(1.0);
+            }
+            
+            .item a{
+                text-decoration: none;
+                padding: 5px 30px;
+                border: none;
+                outline: none;
+                background-color: green;
+                color: white;
+                cursor: pointer;
+                border-radius: 4px;
+                font-size: 20px;
+                display: block;
+                margin: 0 auto;
+                transition: 0.2s all;
+                color: #fffbfb;
+            }
+            @media  screen and(max-width:1000px) {
+                .items{
+                    grid-template-columns: repeat(2,1fr);
+                }
+            }
+            @media  screen and(max-width:768px) {
+                .items{
+                    grid-template-columns: repeat(1,1fr);
+                }
+            }
+            
+
+        </style>
+    </head>
+    <body>
+        
+        <h1 style="text-shadow:2px 3px 3px rgba(139, 3, 251, 0.724);">PRODUCTS AVAILABLE</h1>
+  
+        <section class="items">
+            <div class="item">
+                <img src="https://c.ndtvimg.com/gws/5024/assets/28.jpeg?1645187308">
+                <h4>Womens Dress</h4>
+            <button style="background-color:aquamarine;color:black;">Buy Now</button> 
+            </div>
+            <div class="item">
+                <img src="https://thumbs.dreamstime.com/b/fashion-clothes-short-sleeve-shirt-pants-men-photo-white-background-149184999.jpg">
+                <h4>Mens wear</h4>
+                <button style="background-color:aquamarine;color:black;">Buy Now</button>
+            </div>
+            <div class="item">
+                <img src="https://5.imimg.com/data5/FP/OC/WC/SELLER-12167522/cosmetics-product-500x500.jpg">
+                <h4>Cosmetics</h4>
+                 <button style="background-color:aquamarine;color:black;">Buy Now</button>
+            </div>
+            <div class="item">
+                <img src="https://media.istockphoto.com/photos/set-of-kitchen-home-appliances-toaster-kettle-mixer-blender-yogurt-picture-id691988470?k=20&m=691988470&s=612x612&w=0&h=ScZdmNlLlwUoiDJOcDAwxbqYHYCeccRJzDhZShx6ZCI=">
+                <h4>Kitchen  Appliances</h4>
+                 <button style="background-color:aquamarine;color:black;">Buy Now</button>
+            </div>
+            <div class="item">
+                <img src="https://t3.ftcdn.net/jpg/02/35/84/44/360_F_235844454_RTTLpnm2asRdwNJ97MU0ENJqnCSUdXQv.jpg">
+                <h4>Electronic Gadgets</h4>
+                <button style="background-color:aquamarine;color:black;">Buy Now</button> 
+            </div>
+            <div class="item">
+                <img src="https://n3.sdlcdn.com/imgs/h/5/k/ALL-ABOUT-PINKS-reg-Party-SDL146836514-1-c5e5a.jpg">
+                <h4>Kids Wear</h4>
+                <button style="background-color:aquamarine;color:black;">Buy Now</button> 
+            </div>
+            <div class="item">
+                <img src="https://img.freepik.com/premium-photo/baby-educational-toys-kid-play-colorful-wooden-toys-white-background-children-education-7-month_369656-2504.jpg?w=2000">
+                <h4>Toys</h4>
+                 <button style="background-color:aquamarine;color:black;">Buy Now</button> 
+            </div>
+            <div class="item">
+                <img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX3904322.jpg">
+                <h4>Jewellery</h4>
+               <button style="background-color:aquamarine;color:black;">Buy Now</button> 
+            </div>
+        </section>
+    </body>
+</html>
+
