--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
           <div class="col-lg-6 col-md-8 mx-auto">
                     <div class="login-form">
                             <form class="mt-5" [formGroup]="loginForm" (ngSubmit)="login()">
-                                <h2 class="text-center secondary ms-mb-m main-heading ng-binding">Login with Amazon</h2>
+                                <h2 class="text-center secondary ms-mb-m main-heading ng-binding">Login </h2>
                                 <br>
                                 <div class="mt-5">
                                 <div class="form-group">
@@ -19,7 +19,7 @@
                                     <label class="error ng-binding" *ngIf="submitted && f['password'].errors?.['minlength']">Password must be at least 6 characters</label>
                                 </div>
                                 <br>
-                                <button type="submit" class="btn btn-warning" href="">Login</button>
+                                <button type="submit" class="btn"  style="background-color: rgb(118, 186, 243);"  href="">Login</button>
                                 
                                 <div class="ms-fs-12 text-center ms-mt-x ms-mb-m forgot">
                                     <p style="padding-top:30px">
@@ -36,4 +36,3 @@
              </div>
         </div>
     </div>
- 
