--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -12,7 +12,7 @@
           <li class="nav-item">
             <!--href - render the entire page-->
             <!--SPA - Partial Rendering - routerLink-->
-            <a class="nav-link active" aria-current="page" routerLink="" >Home</a>
+            <a class="nav-link active" aria-current="page"  routerLink="home" >Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="register" *ngIf="!auth">Login/Register</a>
@@ -50,6 +50,9 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" style="color:red;">Happy Shopping</a>
           </li>
         </ul>
+        <button routerLink='cartitem' style="height:5px;border:none;" *ngIf="auth">
+          <span class="fa fa-cart-plus" style="font-size:16px;color:black"><sup class="text-warning" style="font-size:10px;margin-left: 3px;;">{{cartCount}}</sup></span>
+        </button> &nbsp;&nbsp;&nbsp;
         <button style="background-color:rgb(126, 190, 246);border-radius:10px;width: 200px;height: 50px;" routerLink="contact">Contact us</button>
         &nbsp;&nbsp;&nbsp;
         <button style="background-color:rgb(126, 190, 246);border-radius:10px;width: 200px;height: 50px;" routerLink="login">Logout </button>
