--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,4 +1,4 @@
 <!--Event Binding-->
-<app-counterchild (countEmitter)="receiveValue($event)"></app-counterchild>
+<app-counterchild (countEmitter)="receivecount($event)"></app-counterchild>
 <br>
 Quantity:{{count}}
