--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -55,7 +55,7 @@
         </button> &nbsp;&nbsp;&nbsp;
         <button style="background-color:rgb(126, 190, 246);border-radius:10px;width: 200px;height: 50px;" routerLink="contact">Contact us</button>
         &nbsp;&nbsp;&nbsp;
-        <button style="background-color:rgb(126, 190, 246);border-radius:10px;width: 200px;height: 50px;" routerLink="login">Logout </button>
+        <button style="background-color:rgb(126, 190, 246);border-radius:10px;width: 200px;height: 50px;" routerLink="login" *ngIf="auth">Logout </button>
       </div>
 
       
