--- a/src/app/cart-items/cart-items.component.html
+++ b/src/app/cart-items/cart-items.component.html
@@ -43,7 +43,7 @@
     <div class="row">
       <div class="col-lg-7">
         <a class="btn btn-dark m-3" (click)="onClick()">Shop More</a>
-        <a class="btn btn-dark m-3" href="https://rzp.io/i/AZpeATOTf" target="_blank">CheckOut</a>
+        <a class="btn btn-dark m-3" href="https://rzp.io/i/6dbwA7byb" target="_blank">CheckOut</a>
       </div>   
       <div class="col-lg-5">
         <div>
