--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -35,10 +35,12 @@
       </div>
 <!--2st col-->
         <div class="col col-lg-4">
+           
         </div>
 <!--3rd col-->
     <div class="col col-lg-4">
     </div>   
 
     </div>
+     <button routerLink="feedback" style="background-color:rgb(126, 190, 246);border-radius:10px;width: 200px;height: 50px;margin-left: 50%;">Feedback</button>
 </div>
