--- a/src/app/dress/dress.component.html
+++ b/src/app/dress/dress.component.html
@@ -25,6 +25,11 @@
                               <br>
                               {{prod.price | currency:'INR'}}
                               <br>
+                              <div >
+                                {{prod.Status}}
+
+                              </div>
+                              
                               <app-counter></app-counter>
                             </div>
                               
