--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,44 +65,49 @@
             <div class="item">
                 <img src="https://c.ndtvimg.com/gws/5024/assets/28.jpeg?1645187308">
                 <h4>Womens Dress</h4>
-            <button style="background-color:aquamarine;color:black;">Buy Now</button> 
+            <button style="background-color:aquamarine;color:black;">60%</button> 
             </div>
             <div class="item">
                 <img src="https://thumbs.dreamstime.com/b/fashion-clothes-short-sleeve-shirt-pants-men-photo-white-background-149184999.jpg">
                 <h4>Mens wear</h4>
-                <button style="background-color:aquamarine;color:black;">Buy Now</button>
+                <button style="background-color:aquamarine;color:black;" >45% OFF</button>
             </div>
             <div class="item">
                 <img src="https://5.imimg.com/data5/FP/OC/WC/SELLER-12167522/cosmetics-product-500x500.jpg">
                 <h4>Cosmetics</h4>
-                 <button style="background-color:aquamarine;color:black;">Buy Now</button>
+                 <button style="background-color:aquamarine;color:black;" >20% OFF</button>
             </div>
             <div class="item">
                 <img src="https://media.istockphoto.com/photos/set-of-kitchen-home-appliances-toaster-kettle-mixer-blender-yogurt-picture-id691988470?k=20&m=691988470&s=612x612&w=0&h=ScZdmNlLlwUoiDJOcDAwxbqYHYCeccRJzDhZShx6ZCI=">
                 <h4>Kitchen  Appliances</h4>
-                 <button style="background-color:aquamarine;color:black;">Buy Now</button>
+                 <button style="background-color:aquamarine;color:black;" >35% OFF</button>
             </div>
             <div class="item">
                 <img src="https://t3.ftcdn.net/jpg/02/35/84/44/360_F_235844454_RTTLpnm2asRdwNJ97MU0ENJqnCSUdXQv.jpg">
                 <h4>Electronic Gadgets</h4>
-                <button style="background-color:aquamarine;color:black;">Buy Now</button> 
+                <button style="background-color:aquamarine;color:black;">30% OFF</button> 
             </div>
             <div class="item">
                 <img src="https://n3.sdlcdn.com/imgs/h/5/k/ALL-ABOUT-PINKS-reg-Party-SDL146836514-1-c5e5a.jpg">
                 <h4>Kids Wear</h4>
-                <button style="background-color:aquamarine;color:black;">Buy Now</button> 
+                <button style="background-color:aquamarine;color:black;">50% OFF</button> 
             </div>
             <div class="item">
                 <img src="https://img.freepik.com/premium-photo/baby-educational-toys-kid-play-colorful-wooden-toys-white-background-children-education-7-month_369656-2504.jpg?w=2000">
                 <h4>Toys</h4>
-                 <button style="background-color:aquamarine;color:black;">Buy Now</button> 
+                 <button style="background-color:aquamarine;color:black;">10% OFF</button> 
             </div>
             <div class="item">
                 <img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX3904322.jpg">
                 <h4>Jewellery</h4>
-               <button style="background-color:aquamarine;color:black;">Buy Now</button> 
+               <button style="background-color:aquamarine;color:black;">15% OFF</button> 
             </div>
         </section>
+        <br>
+        <br>
+        <marquee>!!! OFFERS OFFERS OFFERS!!! </marquee>
+        <br>
+        <br>
 
 
 
