--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -24,7 +24,7 @@ form {
 
 form:hover {
     color: rgb(39, 16, 248);
-    background-color: rgb(78, 157, 237);
+    background-color: rgb(176, 177, 252);;
    
     background-image: ('');
     transform:scale(1.2);
