--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -18,9 +18,9 @@
             <a class="nav-link" routerLink="register" *ngIf="!auth">Register/Login
 </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" routerLink="login" *ngIf="!auth">Admin Login</a>
-          </li>
+          </li> -->
           
           <!-- <li class="nav-item">
             <a class="nav-link" routerLink="cards" >Products</a>
