--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -75,12 +75,12 @@ Retrieve the details from the form and render them using the json pipe
             <form class="mt-5" [formGroup]="registerForm" (ngSubmit)="submitHandler()">
                 <h2 class="text-center secondary ms-mb-m main-heading ng-binding">Signup</h2>
                 <br>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <input type="password" class="form-control" name="username" formControlName="username" placeholder="Enter username">
                     <label class="error ng-binding" *ngIf="submitted && f['username'].errors?.['required']">Username is required</label>
                     <label class="error ng-binding" *ngIf="submitted && f['username'].errors?.['minlength']">Username must be at least 6 characters</label>
                     
-                </div>
+                </div> -->
                 <div class="form-group">
                     <input type="text" class="form-control" name="username" formControlName="username"
                         placeholder="Enter Username" required>
@@ -95,12 +95,13 @@ Retrieve the details from the form and render them using the json pipe
                     <label class="error ng-binding" *ngIf="submitted && f['useremail'].errors?.['useremail']">Email must be a valid email address</label>
                 </div>
                 <br>
-                <br>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" name="password" formControlName="password" placeholder="Password">
-                                    <label class="error ng-binding" *ngIf="submitted && f['password'].errors?.['required']">Password is required</label>
-                                    <label class="error ng-binding" *ngIf="submitted && f['password'].errors?.['minlength']">Password must be at least 6 characters</label>
-                                </div>
+                
+                <div class="form-group">
+                    <input type="password" class="form-control" name="password" formControlName="password" placeholder="Password">
+                    <label class="error ng-binding" *ngIf="submitted && f['password'].errors?.['required']">Password is required</label>
+                    <label class="error ng-binding" *ngIf="submitted && f['password'].errors?.['minlength']">Password must be at least 6
+                        characters</label>
+                </div>
                 <!-- <div class="form-group">
                     <input type="password" class="form-control" name="password" formControlName="password"
                         placeholder="Enter password">
